add-ejs-views-and-fixed-some-problems
